Add sort buttons

--- a/pages/index.html
+++ b/pages/index.html
@@ -79,7 +79,11 @@
         </div>
         <div class="coveo-sort-section">
           <span class="CoveoSort" data-sort-criteria="relevancy" data-caption="Relevance"></span>
-          <span class="CoveoSort" data-sort-criteria="date descending,date ascending" data-caption="Date"></span>
+          <span class="CoveoSort" data-sort-criteria="@pokemon_name ascending,@pokemon_name descending"
+            data-caption="A-Z"></span>
+          <span class="CoveoSort"
+            data-sort-criteria="@pokemon_nationalnumber ascending, @pokemon_nationalnumber descending"
+            data-caption="National #"></span>
         </div>
       </div>
       <div class="CoveoHiddenQuery"></div>
