--- a/pages/index.html
+++ b/pages/index.html
@@ -52,7 +52,7 @@
       <input type="checkbox" id="facet-toggle" checked onchange="toggleFacetMode()" />
       <label for="facet-toggle" id="facet-toggle-label">Facet Mode: AND</label>
       <div class="CoveoFacet" data-title="Type" data-field="@pokemon_types"></div>
-      <div class="CoveoFacet" data-title="Type" data-field="@pokemon_generation" data-sort-criteria="alphaascending"></div>
+      <div class="CoveoFacet" data-title="Generation" data-field="@pokemon_generation" data-sort-criteria="alphaascending"></div>
       <div class="CoveoFacetSlider" data-title="Pokémon National Number" data-field="@pokemon_nationalnumber"
         data-range-slider='true' steps=100 start=1></div>
       <div class="CoveoFacetSlider" data-title="Weight (kg)" data-field="@pokemon_weight" data-graph-steps=10
